--- a/stylemk.css
+++ b/stylemk.css
@@ -1,12 +1,28 @@
 .flex-container{
     display: flex;
+    flex-direction: row;
 }
 .inline-flex-container{
     display: inline-flex;
+    flex-direction: row;
 }
 .bg-red{
     background-color: red;
 }
 .bg-blue{
     background-color: skyblue;
+}
+.flex-container>div {
+    background-color: darkgray;
+    margin: 10px;
+    padding: 20px;
+    font-size: 30px;
+    width: 70px;
+}
+.inline-flex-container>div{
+    background-color: lightgrey;
+    margin: 20px;
+    padding: 10px;
+    font-size: 25px;
+    width: 70px;
 }
