--- a/stylemk.css
+++ b/stylemk.css
@@ -1,10 +1,13 @@
 .flex-container{
     display: flex;
-    flex-direction: row;
+    flex-flow: row no-wrap;
+    
+    
 }
 .inline-flex-container{
     display: inline-flex;
-    flex-direction: row;
+    flex-flow:row no-wrap;
+   
 }
 .bg-red{
     background-color: red;
@@ -17,7 +20,7 @@
     margin: 10px;
     padding: 20px;
     font-size: 30px;
-    width: 70px;
+    width: 600px;
 }
 .inline-flex-container>div{
     background-color: lightgrey;
@@ -25,4 +28,18 @@
     padding: 10px;
     font-size: 25px;
     width: 70px;
+}
+
+.d1{
+    order: 1;
+    flex-basis: 200px;
+}
+.d2{
+    order: 3;
+    flex-basis: 100px;
+    
+}
+.d3{
+    order: 2;
+    flex-basis: 100px;
 }
