--- a/stylemk2.css
+++ b/stylemk2.css
@@ -1,7 +1,8 @@
 div{
-    border: 1px solid black;
+   
 }
 .main{
+border: 1px solid black;
     display:  flex;
     flex-direction: column;
 }
@@ -18,8 +19,10 @@ div{
 }
 .contentPane{
     display: flex;
+    
 }
 .contentPane2{
+    border: 1px solid black;
     display: flex;
     flex-direction: column;
     
@@ -33,6 +36,7 @@ div{
     
 }
 .contentPane3{
-    height: 20px;
-    width: 60px;
+    border: 1px solid black;
+    flex-grow: 1;
+    
 }
